--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/702869924?h=4e901e3086&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="PROTOCOLO ZERO BARRIGA"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            <script type="text/javascript" id="scr_6266dc695b5f52000a7e0597">var s=document.createElement("script");s.src="https://scripts.converteai.net/6432631a-76a5-4e13-b06b-c79eac1fb933/players/6266dc695b5f52000a7e0597/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
