--- a/ps/index.html
+++ b/ps/index.html
@@ -15,7 +15,7 @@
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://pzbarriga.site/">CONTINUAR</a>
+          <a class="btn" href="www.google.com.br/">CONTINUAR</a>
         </div>
       </div>    
     </div>
