--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         background-blend-mode: darken;
       }
     </style>
-    
+
     <!-- Meta Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
@@ -56,7 +56,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
+            <h3 class="my-4"><b>6 ingredientes Simples Que Fazem Diminuir Drasticamente a Silhueta</b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_6266dc695b5f52000a7e0597">var s=document.createElement("script");s.src="https://scripts.converteai.net/6432631a-76a5-4e13-b06b-c79eac1fb933/players/6266dc695b5f52000a7e0597/player.js",s.async=!0,document.head.appendChild(s);</script>
